--- a/index.html
+++ b/index.html
@@ -82,28 +82,29 @@
       <li><a href="mapas_referentes/Mapa_Coahuila.html">Coahuila (45 tabletas)</a></li>
       <li><a href="mapas_referentes/Mapa_Colima.html">Colima (47 tabletas)</a></li>
       <li><a href="mapas_referentes/Mapa_Durango.html">Durango (645 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Estado_de_México.html">Estado de México (6714 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Guanajuato.html">Guanajuato (6714 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Guerrero.html">Guerrero (6714 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Hidalgo.html">Hidalgo (429 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Jalisco.html">Jaliso (429 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Michoacán.html">Michoacán (902 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Morelos.html">Morelos (902 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Nayarit.html">Nayarit (902 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Nuevo_León.html">Nuevo León (902 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Oaxaca.html">Oaxaca (1022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Puebla.html">Puebla (1120 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Querétaro.html">Querétaro (1120 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Quintana_Roo.html">Quintana Roo (1120 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Sinaloa.html">Sinaloa (1022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Sonora.html">Sonora (1022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Tabasco.html">Tabasco (320 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Tamaulipas.html">Tamaulipas (416 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Texas.html">Texas (416 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Tlaxcala.html">Tlaxcala (416 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Veracruz.html">Veracruz (1022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Yucatán.html">Yucatán (1022 tabletas)</a></li>
-      <li><a href="mapas_referentes/Mapa_Zacatecas.html">Zacatecas (1022 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Estado_de_México.html">Estado de México (955 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Guanajuato.html">Guanajuato (138 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Guerrero.html">Guerrero (247 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Hidalgo.html">Hidalgo (100 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Jalisco.html">Jaliso (33 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Michoacán.html">Michoacán (250 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Morelos.html">Morelos (93 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Nayarit.html">Nayarit (101 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Nuevo_León.html">Nuevo León (131 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Oaxaca.html">Oaxaca (461 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Puebla.html">Puebla (15 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Querétaro.html">Querétaro (31 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Quintana_Roo.html">Quintana Roo (282 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_San_Luis_Potosí.html">San Luis Potosí (16 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Sinaloa.html">Sinaloa (44 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Sonora.html">Sonora (43 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Tabasco.html">Tabasco (111 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Tamaulipas.html">Tamaulipas (82 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Texas.html">Texas (1 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Tlaxcala.html">Tlaxcala (22 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Veracruz.html">Veracruz (577 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Yucatán.html">Yucatán (43 tabletas)</a></li>
+      <li><a href="mapas_referentes/Mapa_Zacatecas.html">Zacatecas (135 tabletas)</a></li>
       </ul>
   </div>
 </section>
