--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <li><a href="Mapa_Coahuila.html">Coahuila (189 tabletas)</a></li>
       <li><a href="Mapa_Colima.html">Colima (45 tabletas)</a></li>
       <li><a href="Mapa_Desconocido.html">Altamar (1 tabletas)</a></li>
-      <li><a href="Mapa_Durango.html">Durango (146 tabletas)</a></li><p>App G-OFF_IMPR-PROM</p>
+      <li><a href="Mapa_Durango.html">Durango (146 tabletas)</a></li>
       <li><a href="Mapa_Estado_de_México.html">Estado de México (732 tabletas)</a></li>
       <li><a href="Mapa_Ciudad_de_México.html">Ciudad de México (591 tabletas)</a></li>
       <li><a href="Mapa_Guanajuato.html">Guanajuato (338 tabletas)</a></li>
